--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.13.2", features = ["dynamic_linking"] }
+bevy = { version = "0.13.2", features = ["dynamic_linking", "mp3"] }
 bevy-trait-query = "0.5.1"
 bevy_asset_loader = { version = "0.20.1", features = ["2d"] }
 rand = "0.8.5"
